fix spacing on landing

--- a/front/apps/landing/src/styles/feature-cards.scss
+++ b/front/apps/landing/src/styles/feature-cards.scss
@@ -15,7 +15,6 @@ $card-height: 540px;
   border-radius: 1em;
   flex: 1;
   padding: 1em 1.5em;
-  gap: 1em;
   display: flex;
   flex-direction: column;
 
@@ -117,6 +116,7 @@ $card-height: 540px;
 
   h2 {
     color: var(--blue);
+    margin-bottom: 0.5em;
   }
 
   h3 {
